feat: implement air and unit test
